add inscription form

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,6 +39,10 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
 
+twig:
+    form_themes:
+        - 'bootstrap_3_layout.html.twig'
+
 # Doctrine Configuration
 doctrine:
     dbal:
