--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -4,11 +4,10 @@ parameters:
     database_port: null
     database_name: hackaton
     database_user: root
-    database_password: root
+    database_password: lalala
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
     mailer_password: null
     secret: ThisTokenIsNotSoSecretChangeIt
-
-    thumbnail_directory: '%kernel.root_dir%/../web/uploads/thumbnail
+    thumbnail_directory: '%kernel.root_dir%/../web/uploads/thumbnail'
