--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -10,5 +10,4 @@ parameters:
     mailer_user: null
     mailer_password: null
     secret: ThisTokenIsNotSoSecretChangeIt
-
-    thumbnail_directory: %kernel.root_dir%/../web/uploads/thumbnail
+    thumbnail_directory: '%kernel.root_dir%/../web/uploads/thumbnail'
